trunk/Archive2/9b/dab5b7b3b97bf6/output
main.cpp: In member function 'std::shared_ptr<Model> Window::get_model()':
main.cpp:15:26: error: converting to 'std::shared_ptr<Model>' from initializer list would use explicit constructor 'std::shared_ptr<_Tp>::shared_ptr(_Tp1*) [with _Tp1 = Model; _Tp = Model]'
         return {new Model};
                          ^
